--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -15,8 +15,7 @@
 @import './default/widgets.scss';
 @import './default/pages.scss';
 @import './default/breadcrumb.scss';
+@import './default/tables.scss';
+@import './default/media.scss';
 @import './responsive/responsive.scss';
-// @import './default/annimations.scss';
-// @import './default/breadcrumb.scss';
-// @import './default/generales.scss';
-// @import './default/tabs.scss';
+
