--- a/assets/scss/default/pages.scss
+++ b/assets/scss/default/pages.scss
@@ -50,7 +50,21 @@ header {
                 background:$white;
                 color:$black;
                 height:fit-content;
+
                 
+                .items{
+                  visibility: hidden;
+                  height: 0;
+                  flex-direction: column;
+                  gap: inherit;
+                
+                  &.active{
+                    animation: notif .5s ease-in-out;
+                    visibility: visible;
+                    height: 100%;
+                  }
+                }
+
                 form{
                     display:flex;
                     flex-direction: column;
