Intégration  page administrations sytemes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -507,7 +507,8 @@ thead, tbody, tfoot, tr, td, th {
   border-color: inherit;
   border-style: solid;
   border-width: 0;
-  text-align: left; }
+  text-align: left;
+  position: relative; }
 
 thead {
   border-bottom: 1px solid #ebebeb; }
@@ -701,6 +702,72 @@ select {
   .preview__link a {
     color: #0f3e58;
     font-size: 1.5rem; }
+
+.d-inherit {
+  display: inherit !important; }
+
+.m-b-10 {
+  margin-block: 10px; }
+
+.badge {
+  background: #0f3e58;
+  color: #fff; }
+
+.btn__fill {
+  background: #0f3e58;
+  color: #fff;
+  padding: 10px; }
+
+.role {
+  position: relative;
+  cursor: pointer; }
+  .role .tooltip {
+    position: absolute;
+    left: 100%;
+    top: -30px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border: 1px solid silver;
+    padding-block: 5px;
+    padding-inline: 5px;
+    z-index: 999999;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    background: #ebebeb;
+    visibility: hidden; }
+    .role .tooltip .header {
+      padding-block: 10px;
+      text-align: center;
+      border-bottom: 1px solid silver;
+      font-size: 2rem; }
+    .role .tooltip .content {
+      display: flex;
+      justify-content: center;
+      gap: 10px; }
+    .role .tooltip .arrow::before {
+      position: absolute;
+      content: '';
+      top: 40%;
+      left: -11%;
+      border-width: 10px;
+      border-style: solid;
+      border-color: transparent #212a2f transparent transparent;
+      border-right-color: #0f3e58; }
+  .role:hover .tooltip {
+    visibility: visible; }
+
+.version {
+  color: #fff;
+  background: #0f3e58;
+  padding: 5px; }
+
+.success {
+  color: #28a745;
+  font-weight: bolder; }
+
+.danger {
+  font-weight: bolder;
+  color: #dc3545; }
 
 /* HEADER TOP */
 header .top__header {
@@ -1000,7 +1067,10 @@ header .middle__header.pages {
     border-radius: 1px;
     background: #fff;
     color: #212a2f;
-    height: fit-content; }
+    height: fit-content;
+    overflow: auto; }
+    .card__body .container .wrapper .card__content td {
+      text-align: left; }
     .card__body .container .wrapper .card__content .items {
       visibility: hidden;
       height: 0;
@@ -1057,6 +1127,26 @@ header .middle__header.pages {
   .responsive__table .table__row a {
     color: #0f3e58;
     font-weight: 500; }
+
+.dataTables_filter {
+  display: none; }
+
+.table__list {
+  border: 1px solid silver;
+  width: 100%; }
+  .table__list h6 {
+    font-size: 1.2rem; }
+  .table__list p {
+    color: #212a2f;
+    font-size: 1.5rem;
+    margin-block: 10px; }
+  .table__list th {
+    font-size: 1.5rem;
+    padding: 10px; }
+  .table__list td {
+    font-size: 1.5rem;
+    border: 1px solid silver;
+    padding: 10px; }
 
 .rv-media-main-wrapper .rv-media-top-header {
   display: flex; }
@@ -1231,7 +1321,14 @@ header .middle__header.pages {
   .content-widget {
     display: grid !important;
     grid-template-columns: 200px 1fr;
-    gap: 20px; } }
+    gap: 20px; }
+  .dataTables_filter {
+    display: block !important;
+    padding: 0;
+    position: absolute;
+    top: -10px !important;
+    right: 0;
+    text-align: none !important; } }
 
 @media (min-width: 992px) {
   .container {
@@ -1281,7 +1378,7 @@ header .middle__header.pages {
           color: black; }
   .card__body .container .wrapper {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, auto);
     gap: 10px; } }
 
 @media (min-width: 1200px) {
