--- a/assets/css/default/variables.css
+++ b/assets/css/default/variables.css
@@ -33,3 +33,84 @@
 /* 
         *  RESPONSIVE CSS VARIABLES
     */
+/* ------------------------
+    - RESET CSS
+--------------------------*/
+html {
+  font-family: "Recoleta", sans-serif;
+  font-size: 10px;
+  scroll-behavior: smooth;
+  background: 5px 5px 5px 5px black; }
+  html body {
+    background: #212a2f;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    overflow-x: hidden;
+    height: 100vh;
+    width: 100vw;
+    color: #212a2f;
+    animation: opacity 1s ease; }
+
+*,
+::after,
+::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+::-webkit-scrollbar {
+  width: 5px; }
+
+::-webkit-scrollbar-track {
+  background: #fff; }
+
+::-webkit-scrollbar-thumb {
+  background: #292929; }
+
+li {
+  list-style: none; }
+
+a {
+  text-decoration: none; }
+
+.text-link {
+  text-decoration: underline;
+  color: #212a2f; }
+
+img {
+  height: auto; }
+
+button {
+  background: none;
+  border: none;
+  cursor: pointer; }
+
+em,
+strong,
+a {
+  color: #212a2f; }
+
+h1 {
+  color: #212a2f !important;
+  font-size: 2rem; }
+
+h2 {
+  color: #212a2f;
+  font-size: 3rem; }
+
+h3 {
+  color: #212a2f;
+  font-size: 4rem; }
+
+h4 {
+  color: #212a2f;
+  font-size: 5rem; }
+
+h5 {
+  color: #212a2f;
+  font-size: 6rem; }
+
+h6 {
+  color: #212a2f;
+  font-size: 7rem; }
